Should've edited the guest user's desktop.conf file to set the background.
Added a link to http://byzantium.mesh:9005/ to the service directory's
index.html file.  It points to Groundstation, because I can't take one
more night of screwing around with mod_proxy_html.

Signed-off-by: The Doctor <drwho@virtadpt.net>

--- a/services/index.html
+++ b/services/index.html
@@ -13,6 +13,7 @@
 <ul>
 <li><a href="/chat/?channels=byzantium">Web chat</a></li>
 <li><a href="/pad/">Notepad</a></li>
+<li><a href="http://byzantium.mesh:9005/">Microblog</a></li>
 </ul>
 
 <script src="js/bootstrap.min.js"></script>
