--- a/services/index.html
+++ b/services/index.html
@@ -13,7 +13,7 @@
 <ul>
 <li><a href="/chat/?channels=byzantium">Web chat</a></li>
 <li><a href="/pad/">Notepad</a></li>
-<li><a href="http://byzantium.mesh:9005/">Microblog</a></li>
+<li><a href="https://byzantium.mesh:9006/">Microblog</a></li>
 </ul>
 
 <script src="js/bootstrap.min.js"></script>
