byzantium version in footer of ~/.passfail html pages was out of date

--- a/porteus/home/guest/.passfail/success.html
+++ b/porteus/home/guest/.passfail/success.html
@@ -99,7 +99,7 @@
       <hr>
 
       <div class="footer">
-        <p>Byzantium Linux v0.3a - <a href="http://project-byzantium.org/">http://project-byzantium.org/</a></p>
+        <p>Byzantium Linux v0.5b - <a href="http://project-byzantium.org/">http://project-byzantium.org/</a></p>
       </div>
 
     </div> <!-- /container -->
