updated software versions and details in README, and ~/.passfail html pages

--- a/porteus/home/guest/.passfail/failure.html
+++ b/porteus/home/guest/.passfail/failure.html
@@ -79,9 +79,9 @@
           <ul>
           <li>Web browser: Firefox</li>
           <li>Media Player: GNOME Mplayer</li>
-          <li>Media Player: Noatun</li>
+          <li>Media Player: SMPlayer</li>
           <li>Word Processor: Abiword</li>
-          <li>PDF Viewer: ePDFviewer</li>
+          <li>PDF Viewer: qpdfview</li>
           </ul>
         </div>
 
@@ -90,7 +90,7 @@
           <ul>
           <li>Image Viewer</li>
           <li>Disk Partition Editor: Gparted</li>
-          <li>Shell: Konsole</li>
+          <li>Shell: LXTerminal</li>
           <li>Save File Manager</li>
           <li>Calculator</li>
           <li>Notepad: Leafpad</li>
